Fix alignment of date field

--- a/src/components/ugemr-metrics/ugandaemr-coverage/UgandaemrCoverage.css
+++ b/src/components/ugemr-metrics/ugandaemr-coverage/UgandaemrCoverage.css
@@ -1,14 +1,3 @@
-.metrics-header {
-  height: 3rem;
-  background-color: #009384;
-  color: white;
-}
-
-.header-label {
-  padding: 0.8rem;
-  font-weight: bold;
-}
-
 .tile-container-ug-coverage {
   display: flex;
 }
@@ -131,6 +120,7 @@
 }
 .switcher-date-container {
   display: flex;
+  justify-content: end;
 }
 
 .date-input-container {
